// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpectralRule lifecycle rules can be applied to spectral rules 1`] = `
[
  {
    "change": {
      "added": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
    },
    "condition": "operation-operationId",
    "docsLink": undefined,
    "error": "Operation must have "operationId".",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "added ",
  },
  {
    "change": {
      "added": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
    },
    "condition": "operation-tags",
    "docsLink": undefined,
    "error": "Operation must have non-empty "tags" array.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "added ",
  },
  {
    "change": {
      "added": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
    },
    "condition": "operation-success-response",
    "docsLink": undefined,
    "error": "Operation must have at least one "2xx" or "3xx" response.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "added ",
  },
]
`;

exports[`SpectralRule lifecycle rules can be applied to spectral rules 2`] = `[]`;

exports[`SpectralRule spectral rules run 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
      "value": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
    },
    "condition": "operation-operationId",
    "docsLink": undefined,
    "error": "Operation must have "operationId".",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "always ",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
      "value": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
    },
    "condition": "operation-tags",
    "docsLink": undefined,
    "error": "Operation must have non-empty "tags" array.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "always ",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users/get",
        "kind": "operation",
      },
      "value": {
        "description": "hello",
        "method": "get",
        "pathPattern": "/api/users",
      },
    },
    "condition": "operation-success-response",
    "docsLink": undefined,
    "error": "Operation must have at least one "2xx" or "3xx" response.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "always ",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "servers": [
          {
            "url": "http://optic.com",
          },
        ],
      },
    },
    "condition": "info-contact",
    "docsLink": undefined,
    "error": "Info object must have "contact" object.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "always ",
  },
  {
    "change": {
      "location": {
        "conceptualLocation": {},
        "conceptualPath": [],
        "jsonPath": "",
        "kind": "specification",
      },
      "value": {
        "info": {
          "title": "Empty",
          "version": "0.0.0",
        },
        "openapi": "3.1.0",
        "servers": [
          {
            "url": "http://optic.com",
          },
        ],
      },
    },
    "condition": "info-description",
    "docsLink": undefined,
    "error": "Info "description" must be present and non-empty string.",
    "exempted": false,
    "isMust": true,
    "isShould": false,
    "passed": false,
    "where": "always ",
  },
]
`;
